# FlashStat

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PROPOSAL.md  README.md  docker-compose.yml  flashstat.db  flashstat.toml
.github/workflows/: ci.yml
crates/flashstat-api/: Cargo.toml
crates/flashstat-api/src/: lib.rs
crates/flashstat-common/: Cargo.toml
crates/flashstat-common/src/: lib.rs
crates/flashstat-core/: Cargo.toml
crates/flashstat-core/src/: lib.rs  main.rs  monitor.rs  proof.rs  tee.rs  wallet.rs
crates/flashstat-db/: Cargo.toml
crates/flashstat-db/src/: lib.rs
sdks/typescript/: package.json  pnpm-lock.yaml  tsconfig.base.json
sdks/typescript/examples/: node-example.ts  package.json
sdks/typescript/examples/nextjs-dashboard/: README.md  package.json
sdks/typescript/examples/nextjs-dashboard/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
