[workspace]
resolver = "2"
members = [
    "bin/flashstat",
    "bin/flashstat-server",
    "bin/flashstat-tui",
    "crates/flashstat-core",
    "crates/flashstat-api",
    "crates/flashstat-db",
    "crates/flashstat-common",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full", "signal"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
rocksdb = "0.21"
async-trait = "0.1"
config = "0.13"
toml = "0.7"
futures-util = "0.3"
jsonrpsee = { version = "0.20", features = ["server", "client", "macros"] }
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
