[package]
name = "flashstat-core"
version = "0.1.0"
edition = "2021"

[dependencies]
flashstat-common = { path = "../flashstat-common" }
flashstat-db = { path = "../flashstat-db" }
ethers = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
