[package]
name = "flashstat-db"
version = "0.1.0"
edition = "2024"

[dependencies]
flashstat-common = { path = "../flashstat-common" }
ethers = { workspace = true }
redb = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true }
chrono = { workspace = true }
